Added DB, security, and email receipts
- Implemented Flask-SQLAlchemy for ticket tracking
- Added Flask-WTF for form validation and CSRF protection
- Created dual email (customer conf + admin notif)

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -13,6 +13,7 @@
         <p>Upon submission, you will recieve an automatic confirmation by email.<br><br>A support specialist will contact you shortly afterward.</p>
 
         <form action="/submit" method="POST">
+            {{ form.csrf_token }}
 
             <div class="form-group">
                 <label for="customer_fname">First Name</label>
@@ -31,7 +32,7 @@
                 <select id="service_type" name="service_type">
                     <option value="repair">Hardware Repair</option>
                     <option value="software">Software Installation</option>
-                    <option valur="consultation">Consultation</option>
+                    <option value="consultation">Consultation</option>
                     <option value="other">Other</option>
                 </select>
             </div>
